--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,17 +3,17 @@
 one:
   title: MyString1
   description: MyText
-  image_url: lorem.jpg
+  image_url: lorem.png
   price: 9.99
 
 two:
   title: MyString2
   description: MyText
-  image_url: lorem.jpg
+  image_url: lorem.png
   price: 9.99
 
 ruby:
   title: RubyOnRails
   description: web development
-  image_url: ruby.jpg
+  image_url: ruby.png
   price: 10
