--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -13,7 +13,9 @@ two:
   price: 9.99
 
 ruby:
-  title: RubyOnRails
-  description: web development
-  image_url: ruby.png
-  price: 10
+  title: Programming Ruby 1.9
+  description: Ruby is the fastest growing and most exciting dynamic
+               language out there.  If you need to get working programs
+               delivered fast, you should add Ruby to your toolbox.
+  price: 49.50
+  image_url: ruby.jpg
