--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -5,12 +5,14 @@ one:
   description: MyText
   image_url: lorem.png
   price: 9.99
+  times_bought: 0
 
 two:
   title: MyString2
   description: MyText
   image_url: lorem.png
   price: 9.99
+  times_bought: 0
 
 ruby:
   title: Programming Ruby 1.9
@@ -19,3 +21,4 @@ ruby:
                delivered fast, you should add Ruby to your toolbox.
   price: 49.50
   image_url: ruby.jpg
+  times_bought: 0
